# stm32f429_app_cmake_template

./: CMakeLists.txt  README.md
Drivers/: CMakeLists.txt
Drivers/STM32F4xx_HAL_Driver/: CMakeLists.txt
Projects/: CMakeLists.txt
cmake/: GNU-ARM-Toolchain.cmake  gcc-arm-none-eabi.cmake
